# vimmi

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  run.py
apps/common/: db.py  exceptions.py  models.py  utils.py
apps/films/: handlers.py
config/: settings.py
