[tool.poetry]
name = "vimmi-exam"
version = "0.1.0"
description = ""
authors = ["yeromenko <mikhail.yeromenko@vilmate.com>"]
readme = "README.md"
packages = [{include = "vimmi_exam"}]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.5.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
black = "^23.7.0"
pydantic = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
